log
Thu, Mar 27, 2025 10:21:48 PM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 10:22:16 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
e68c3bc
Thu, Mar 27, 2025 10:24:04 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1ab9346
Thu, Mar 27, 2025 10:24:54 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54e9f14
Thu, Mar 27, 2025 10:26:26 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e471e04
Thu, Mar 27, 2025 10:26:53 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
7fc3cb3
Thu, Mar 27, 2025 10:31:55 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d0c309d
